src/alto-ui/Tooltip/Tooltip.scss
@import '../scss/inc';

.Tooltip__wrapper {
  position: relative;
  &--absolute {
    position: absolute;
  }
}

.Tooltip {
  @extend %reset-styles;
  visibility: hidden;
  padding: $spacing-x-small $spacing-small;
  font-size: $font-size-small;
  border-radius: $border-radius-default;
  background-color: $coolgrey-80;
  max-width: 20rem;
  line-height: 1.25;

  opacity: 0;
  transition: none;
  display: flex;
  align-items: flex-start;
  z-index: $z-index-tooltip;
  color: $white;

  //default
  &--bottom {
    transform: translateY(-$spacing-small);
  }

  &--top {
    transform: translateY($spacing-small);
  }

  &--left {
    transform: translateX($spacing-small);
  }

  &--right {
    transform: translateX(-$spacing-small);
  }

  &--visible {
    visibility: visible;
    opacity: 1;
    transition: transform $duration-quick ease-out 250ms, opacity $duration-quick ease-out 250ms;
    transform: translateX(0) translateY(0);
  }
}

// --- sizes ---
.Tooltip {
  &--narrow {
    max-width: 10rem;
  }
  &--wide {
    max-width: 30rem;
  }
}

.Tooltip--big {
  padding: $spacing-small $spacing-medium;
  font-size: $font-size-medium;
}

.Tooltip__icon {
  color: $white;
  // &--success {
  //   color: $green;
  // }
  // &--warning {
  //   color: $orange;
  // }
  // &--error {
  //   color: $red;
  // }
  // &--info {
  //   color: $blue;
  // }
}

.Tooltip__content {
  flex: 1;
}

